--- a/config.json
+++ b/config.json
@@ -3,5 +3,5 @@
     "lineBreaks": "gfm",
     "additionalFooterText": "",
     "anchorCharacter": "&#x2693;",
-    "title": "MAKEDUCK - 소셜개발그룹"
+    "title": "makeduck-소셜개발그룹"
 }
